--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "pg": "^7.18.1",
     "pg-hstore": "^2.3.3",
     "react": "^16.12.0",
+    "react-awesome-slider": "^4.0.2",
     "react-dom": "^16.12.0",
     "react-google-maps": "^9.4.5",
     "react-native-google-places-autocomplete": "^1.4.0",
