Bug fixes: Sign up buttons, social links, zip code validations, lots of code clean up

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@capacitor/core": "1.4.0",
     "@capacitor/ios": "^1.4.0",
     "@ionic-native/geolocation": "^5.20.0",
+    "@ionic-native/in-app-browser": "^5.21.0",
     "@ionic/pwa-elements": "^1.4.1",
     "@ionic/react": "^4.11.8",
     "@ionic/react-hooks": "0.0.6",
@@ -23,6 +24,7 @@
     "chai": "^4.2.0",
     "compression": "^1.7.4",
     "connect-session-sequelize": "^6.0.0",
+    "cordova-plugin-inappbrowser": "^3.2.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "enzyme": "^3.11.0",
