--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "sequelize": "^5.21.3",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
+    "stream-chat": "^1.3.2",
+    "stream-chat-react": "^0.8.2",
     "typescript": "3.7.4"
   },
   "scripts": {
