--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ionicons": "^4.6.3",
     "mocha": "^7.0.1",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "node-fetch": "^2.6.0",
     "node-sass": "^4.13.1",
     "passport": "^0.4.1",
