--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "dependencies": {
     "@capacitor/core": "1.4.0",
-    "@capacitor/ios": "^1.4.0",
-    "@ionic-native/geolocation": "^5.20.0",
-    "@ionic-native/in-app-browser": "^5.21.0",
-    "@ionic/pwa-elements": "^1.4.1",
+    "@capacitor/ios": "^1.5.0",
+    "@ionic-native/geolocation": "^5.21.4",
+    "@ionic-native/in-app-browser": "^5.21.4",
+    "@ionic/pwa-elements": "^1.4.2",
     "@ionic/react": "^4.11.8",
     "@ionic/react-hooks": "0.0.6",
     "@ionic/react-router": "^4.11.8",
@@ -15,7 +15,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^8.0.3",
     "@types/jest": "^24.0.25",
-    "@types/node": "^12.12.24",
+    "@types/node": "^12.12.27",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.4",
@@ -23,7 +23,7 @@
     "axios": "^0.19.2",
     "chai": "^4.2.0",
     "compression": "^1.7.4",
-    "connect-session-sequelize": "^6.0.0",
+    "connect-session-sequelize": "^6.1.1",
     "cordova-plugin-inappbrowser": "^3.2.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -53,12 +53,12 @@
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.3.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "sequelize": "^5.21.3",
+    "sequelize": "^5.21.4",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "typescript": "3.7.4"
