--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "typescript": "3.7.4"
   },
   "scripts": {
-    "start": "react-scripts start & npm run start-server",
+    "start": "react-scripts start & node server",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "deploy": "script/deploy",
