--- a/package.json
+++ b/package.json
@@ -54,10 +54,12 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.1",
+    "react-scroll-to-bottom": "^1.3.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "scroll-into-view-if-needed": "^2.2.24",
     "sequelize": "^5.21.4",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
