--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^16.12.0",
     "react-awesome-slider": "^4.0.2",
     "react-dom": "^16.12.0",
+    "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.1.0",
     "react-google-maps": "^9.4.5",
     "react-native-google-places-autocomplete": "^1.4.0",
