--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "firebase": "^7.8.2",
     "history": "^4.10.1",
     "ionicons": "^4.6.3",
     "mocha": "^7.0.1",
