--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "sequelize": "^5.21.4",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
+    "svg-loaders-react": "^2.2.1",
     "typescript": "3.7.4"
   },
   "scripts": {
