--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "start": "react-scripts start & node server",
     "build": "react-scripts build",
     "test-front": "react-scripts test",
-    "test-back": "NODE_ENV='test' mocha \"./server/**/*.spec.js\" \"./script/**/*.spec.js\" --require @babel/polyfill --require @babel/register",
+    "test-back": "NODE_ENV='test' mocha \"./script/**/*.spec.js\" \"./server/**/*.spec.js\" --require @babel/polyfill --require @babel/register",
     "deploy": "script/deploy",
     "eject": "react-scripts eject",
     "start-dev": "NODE_ENV='development' ionic serve & NODE_ENV='development' npm run start-server",
